# diana

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt  run.py  setup.bat  setup.sh
.github/workflows/: test.yml
.streamlit/: config.toml
diana/: config.py  database.py  models.py  utils.py
diana/dashboard/: Home.py  app.py  sidebar.py
diana/dashboard/pages/: 1_Upload.py  2_Library.py  3_News.py  3_Settings.py  4_Web.py  5_Settings.py
diana/llm/: client.py  registry.py
diana/news/: scraper.py  summarizer.py
diana/parsers/: base.py  epub_parser.py  pdf_parser.py  registry.py  txt_parser.py
diana/processing/: chunker.py  cleaner.py  llm_cleaner.py  merger.py  pipeline.py  synthesizer.py  worker.py
diana/tts/: base.py  elevenlabs_engine.py  kokoro_engine.py  openai_tts_engine.py  piper_engine.py  registry.py
tests/: test_chunker.py  test_cleaner.py  test_config.py  test_database.py  test_llm_client_anthropic_cli.py  test_merger.py  test_models.py  test_parsers.py  test_pipeline.py  test_piper_engine.py  test_summarizer.py
