[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diana"
version = "0.2.0"
description = "Text-to-Speech Document Converter"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "streamlit>=1.30.0",
    "PyMuPDF>=1.23.0",
    "EbookLib>=0.18",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
diana = "run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
