[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diana"
version = "1.0.0"
description = "Text-to-Speech Document Converter"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
readme = "README.md"
dependencies = [
    "streamlit>=1.30.0",
    "PyMuPDF>=1.23.0",
    "EbookLib>=0.18",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12.0",
    "piper-tts>=1.0.0",
    "pydub>=0.25.1",
    "pyaudioop>=0.0.1; python_version>='3.13'",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.0",
]

[project.optional-dependencies]
llm = ["openai>=1.30.0", "anthropic>=0.25.0", "google-generativeai>=0.5.0"]
cloud-tts = ["openai>=1.30.0"]
news = ["requests>=2.31.0"]
all = ["openai>=1.30.0", "anthropic>=0.25.0", "google-generativeai>=0.5.0", "requests>=2.31.0"]
dev = ["pytest>=7.0"]

[project.scripts]
diana = "run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
